--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Home: index.md
   - Private Server: private-server.md
   - Reverse Engineering: offline-mod.md
+  - Custom Charts & Packs: custom-charts-packs.md
 theme:
   name: material
   palette:
